tests/urmoac/errors/unknown_option/errors.urmoac
Error: The option 'foo' is not known.
